dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/configuration-snippet: |-
      proxy_ssl_server_name on;
      proxy_ssl_name $host;
  name: dashboard-ingress
  namespace: kubernetes-dashboard
spec:
  rules:
  - host: dashboard.internal
    http:
      paths:
      - backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 8443
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - dashboard.internal
    secretName: tls-dashboard-secret
